--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
       <div class="border-frame"></div>
       <div class="slide-content">
         <h2 class="animate-text delay-1"></h2>
-        <div class="full-width-line animate-text delay-2">Condições</div>
+        <div class="full-width-line animate-text delay-2"></div>
         <div class="split-content">
           <div>
             <h3 class="animate-text delay-3"></h3>
